--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -16,6 +16,12 @@ repositories {
 
 dependencies {
 	
+	// Test
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testCompileOnly 'junit:junit:4.13'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
+
 	// JWT
 	compile 'io.jsonwebtoken:jjwt-api:0.11.2'
     runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
